# Blackwire

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  cross-platform.yml  interop-smoke.yml  perf-and-soak.yml  security-audit.yml
benches/: Cargo.toml  perf-baseline.md
benches/benches/: buffer_pool.rs  e2e_ss2022.rs  e2e_trojan_tcp.rs  e2e_vless_tcp.rs  e2e_vless_ws.rs  e2e_vmess_grpc.rs  protocol_matrix.rs  tcp_relay_throughput.rs  udp_relay.rs
benches/scripts/: flamegraph-protocol.sh  run-protocol-matrix.sh
benches/src/: harness.rs
black-ui/frontend/: package-lock.json  package.json  vite.config.ts
black-ui/frontend/scripts/: qa-advanced-config-structured.mjs  qa-all.mjs  qa-flow.mjs  qa-inbounds-structured.mjs  qa-outbounds-structured.mjs
black-ui/frontend/src/: App.tsx  styles.css
black-ui/server/src/: app.rs  auth.rs  capabilities.rs  config.rs  enforcement.rs  error.rs  firewall.rs  handlers.rs  runtime.rs  state.rs
ci/: bench-gate-key-scenarios.txt  bench-gate-ss2022.txt  bench-gate-trojan.txt  bench-gate-vless.txt  bench-gate-vmess-grpc.txt
ci/perf-baselines/: memory_nginx_1k.json  memory_nginx_64k.json
ci/scripts/: check_memory_regression.py
ci/security/: check_source_policy.py  run_dependency_audit.sh
crates/blackwire-api/: Cargo.toml
crates/blackwire-api/src/: handler_service.rs  lib.rs  management.rs  stats.rs
crates/blackwire-app/: Cargo.toml
crates/blackwire-app/src/: balancer.rs  context.rs  dispatcher.rs  dns.rs  features.rs  lib.rs  metrics.rs  relay.rs  router.rs  runtime_stats.rs  sniff.rs
crates/blackwire-cli/: Cargo.toml
crates/blackwire-cli/src/: main.rs
crates/blackwire-common/: Cargo.toml
crates/blackwire-common/src/: aead.rs  af_xdp.rs  buf.rs  error.rs  lib.rs  relay.rs  splice.rs  stream.rs  zerocopy.rs
crates/blackwire-config/src/: lib.rs  schema.rs
crates/blackwire-connmgr/: Cargo.toml
crates/blackwire-connmgr/src/: commands.rs  lib.rs  manager.rs  meta.rs  metrics.rs
crates/blackwire-core/: Cargo.toml
crates/blackwire-core/src/: data_plane.rs  http.rs  hysteria2.rs  lib.rs  outbound_transport.rs  reality.rs  reload.rs  ss2022.rs  trojan.rs  tuic.rs  vmess.rs  ws_tls.rs
crates/blackwire-core/tests/: production_readiness.rs  reload_listeners.rs
crates/blackwire-protocol/src/: freedom.rs  http_connect.rs  socks.rs  socks5_udp.rs  ss2022.rs  trojan.rs  vmess.rs
crates/blackwire-protocol/tests/: fragmentation_parsers.rs  production_readiness.rs
crates/blackwire-transport/: Cargo.toml
crates/blackwire-transport/src/: grpc.rs  httpupgrade.rs  hysteria2.rs  innerflow.rs  lib.rs  mkcp.rs  quic.rs  reality.rs  splithttp.rs  splithttp_packet_up.rs  tls.rs  tuic.rs  tun.rs  v2rayquic.rs  ws.rs
crates/blackwire-transport/tests/: tun_priv.rs
crates/proxy-app/src/: balancer.rs  health.rs
crates/proxy-cli/src/: main.rs
crates/proxy-core/src/: instance.rs  lib.rs  outbound_transport.rs  trojan.rs  ws_tls.rs
crates/proxy-core/tests/: production_readiness.rs
crates/proxy-protocol/: Cargo.toml
crates/proxy-protocol/src/: lib.rs  ss2022.rs
crates/proxy-tls/src/: client_hello.rs  lib.rs
crates/proxy-transport/: Cargo.toml
crates/proxy-transport/src/: lib.rs  mkcp.rs  shadowtls.rs  tun.rs  ws.rs
deploy/docker/: Dockerfile
deploy/systemd/: blackwire.service
docs/: 00-project-map.md  02-crate-guide.md  03-protocols-and-transports.md  06-how-to-debug.md  07-how-to-add-a-new-protocol-or-transport.md  08-config-for-dummies.md  09-trace-one-connection-in-code.md  10-glossary.md  11-testing.md  12-production-readiness.md  12-proxy-protocols-from-scratch.md  15-make-command-guide.md  16-environment-cheatsheet.md  README.md  advanced-config-panel-qa.md  commands.md  fast-profile.md  feature-matrix.md  license-policy.md  make-target-inventory.md  network-resilience-roadmap.md  outbounds-panel-qa.md  panel-qa.md  parity-status.md  performance-evidence.md  performance.md  readiness.md  release.md  roadmap.md  test-workflows.md  third-party-references.md  user-guide.md  xray-parity-roadmap.md  xray-parity-source-of-truth.md
examples/: ss2022-client.json
examples/health-failover/: README.md  config.json
examples/phase8-health-failover/: README.md
examples/phase8-mkcp-vless/: README.md  server.json
examples/phase8-tun-local/: README.md  config.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  hysteria2_frame.rs  reality_client_hello.rs  shadowtls_handshake.rs  ss2022_chunk.rs  vless_header.rs  vmess_aead_header.rs
labs/competitive/: Makefile  README.md
labs/competitive/baselines/: README.md
labs/competitive/docker/: README.md
labs/competitive/reports/: .gitignore
labs/competitive/scripts/: direct_udp_bench.py  run_cpu_profile.sh  (+10 more)
labs/realistic/: Makefile  README.md  production-readiness.mk
make/: verify.mk
scripts/: install.sh
scripts/bench/: criterion_gate.sh
tests/: Cargo.toml
tests/common/: leak_check.rs
tests/resource_limits/: exhaustion.rs
tests/security/: mod.rs
tests/tests/: e2e_health_failover.rs  e2e_http_connect.rs  e2e_hysteria2.rs  e2e_hysteria2_udp.rs  e2e_phase6_vless_quic.rs  e2e_phase6_vless_splithttp.rs  e2e_socks5_vless.rs  e2e_ss2022.rs  e2e_ss2022_udp.rs  e2e_trojan.rs  e2e_trojan_udp.rs  e2e_trojan_udp_outbound.rs  e2e_tuic.rs  e2e_vless_mux.rs  e2e_vless_udp_outbound.rs  e2e_vless_vision.rs  e2e_vless_xudp.rs  e2e_vmess.rs  parity_domain_strategy.rs
tools/perf/: memory_profile_nginx.sh
(+289 files in other folders)
