[package]
name        = "blackwire"
description = "Command-line binary for the proxy platform."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Optional global allocators. mimalloc is cross-platform (Linux + Windows);
# jemalloc is non-Windows only. Both are off by default: local micro-benchmarks
# showed no throughput gain over system malloc and a small RSS increase, so
# enabling one should be a deliberate, load-tested choice for a given
# deployment rather than a baked-in default.
#   build with:  --features mimalloc   (or, non-Windows)  --features jemalloc
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "blackwire"
path = "src/main.rs"

[dependencies]
blackwire-common    = { path = "../blackwire-common" }
blackwire-config    = { path = "../blackwire-config" }
blackwire-core      = { path = "../blackwire-core" }
blackwire-app       = { path = "../blackwire-app" }
blackwire-api       = { path = "../blackwire-api" }
blackwire-protocol  = { path = "../blackwire-protocol" }
blackwire-connmgr   = { path = "../blackwire-connmgr" }
blackwire-transport = { path = "../blackwire-transport" }

tokio.workspace              = true
clap.workspace               = true
async-trait.workspace        = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
serde_json.workspace         = true
validator.workspace          = true
rand.workspace               = true
bytes.workspace              = true
hex.workspace                = true
x25519-dalek.workspace       = true
uuid.workspace               = true
num_cpus.workspace           = true
metrics-exporter-prometheus.workspace = true
axum.workspace               = true
mimalloc = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
